# brazilian_favela_urop

./: .gitignore  Brazil_data_collection.ipynb  README.md  brazil_landslides.csv  pyproject.toml  reddit_example_api.ipynb  redo.ipynb  snscrape_test02.py  testing_apis.ipynb  tweets.json
failed attempts/: scrapper01_twikit.ipynb  scrapper02_snscrape.ipynb  scrapper03_playwright.ipynb  scrapper04_instaloader.ipynb  scrapper05_llm.ipynb
