[tool.poetry]
name = "brazilian-favela-urop"
version = "0.1.0"
description = ""
authors = ["Haley"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = ">=2.32.5,<3.0.0"
snscrape = {git = "https://github.com/JustAnotherArchivist/snscrape.git"}
ipykernel = "^6.30.1"
pandas = "^2.3.3"
jupyterlab = "^4.4.9"
notebook = "^7.4.7"
playwright = "^1.55.0"
jmespath = "^1.0.1"
scrapfly-sdk = "^0.8.23"
twikit = "^2.3.3"
instaloader = "^4.14.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
